--- a/top5.html
+++ b/top5.html
@@ -7,10 +7,12 @@
 </head>
 <body>
     <h1>Top 5 glorpies</h1>
-    <em>gurp</em>
-    <ol>blorp</ol>
-    <li>snerp</li>
-    <li>zorp</li>
-    <li>flarp</li>
+    <ol>
+        <li>gurp</li>
+        <li>blorp</li>
+        <li>snerp</li>
+        <li>zorp</li>
+        <li>flarp</li>
+    </ol>
 </body>
 </html>
