--- a/top5.html
+++ b/top5.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>Top 5 glorpies</h1>
-    <ol>
+<body style="background-color: rgb(5, 48, 1);">
+    <h1 style="color: rgb(16, 130, 6);">Top 5 Glorpies</h1>
+    <ol style="color: rgb(40, 187, 21);"">
         <li>gurp</li>
         <li>blorp</li>
         <li>snerp</li>
         <li>zorp</li>
         <li>flarp</li>
     </ol>
+    <img src="glorpie.png" alt="Glorpies" style="width:100px;height:80px;">
 </body>
 </html>
