--- a/webring.html
+++ b/webring.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body style="background-color: rgb(0, 47, 20);">
-    <hi style="color: green;">Name: Nolan Pronouns: he/him</h1>
+    <h1 style="color: green;"> Name: Nolan Pronouns: he/him </h1>
         <p>
             <img src="glorpie.png" alt="Glorpies" style="width:100px;height:80px;"> </p>
     <q style="color: rgb(191, 251, 204)">guh..</q>
