--- a/webring.html
+++ b/webring.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color: rgb(0, 47, 20);">
-    <h1 style="color: green;"> Name: Nolan Pronouns: he/him </h1>
+<body background="space.png">
+    <h1 style="color: rgb(11, 220, 11);"> Name: Nolan | Pronouns: he/him </h1>
         <p>
             <img src="glorpie.png" alt="Glorpies" style="width:100px;height:80px;"> </p>
     <q style="color: rgb(191, 251, 204)">guh..</q>
