--- a/webring.html
+++ b/webring.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>best thingy evah</title>
 </head>
-<body background="space.png">
-    <h1 style="color: rgb(11, 220, 11);"> Name: Nolan | Pronouns: he/him </h1>
+<body background="space.png" style="text-align:center;">
+    <h1 style="color: rgb(11, 220, 11); text-align:center;"> Name: Nolan | Pronouns: he/him </h1>
         <p>
-            <img src="glorpie.png" alt="Glorpies" style="width:100px;height:80px;"> </p>
-    <q style="color: rgb(191, 251, 204)">guh..</q>
-    <pre style="font-size: 0.1%; color: rgb(108, 255, 118)">                                .do-"""""'-o..                        
+            <img src="glorpie.png" alt="Glorpies" style="width:500px;height:400px;"> </p>
+    <q style="color: rgb(191, 251, 204); font-size: 150%">guh..</q>
+    <pre style="font-size: 10%; color: rgb(108, 255, 118)">                                .do-"""""'-o..                        
                              .o""            ""..                       
                            ,,''                 ``b.                   
                           d'                      ``b                   
@@ -55,7 +55,7 @@ d"""    `""""""""""""Y:d8P                              8,          `b
  :             dP            88     8b.   ,d'              ``b       8 
  :             8.            8P     8""'  `"                 :.      8 
 </pre>
-<a href="https://www.youtube.com/watch?v=A8UDRnLX7rc" style="color: rgb(108, 255, 118)">zorp anthem</a>
+<a href="https://www.youtube.com/watch?v=A8UDRnLX7rc" style="color: rgb(108, 255, 118); font-size: 200%;">zorp anthem</a>
 <p>hi</p>
 </body>
 </html>
