--- a/Profiel.html
+++ b/Profiel.html
@@ -5,24 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
 </head>
-<body>
-    <h2 style="text-align: center;">Instagram</h2> <!--title-->
-    <h1>Tim Buck</h1> <!--name-->
-    <p style="font-size: 120%"> @Buckulon8855</p> <!--@-->
-    <p style="font-size: 160%;"> 38 | 6'5" | 285lbs | <br> Professional Child Thrower  </p> <!--text-->
-    <a href="https://www.facebook.com/" style="font-size: 120%">www.Facebook/Buckinator</a> <!--link-->
+<body style="background-color: rgb(50, 30, 30);"">
+    <h2 style="font-size: 200%; text-align: center; font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(255, 201, 201);">Instagram</h2> <!--title-->
+    <h1 style="color: rgb(203, 27, 27); font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; text-align: center;">Tim Buck</h1> <!--name-->
+    <img src="Tim-Buck.jpg.webp" style="width:250px; float:right;"> <!--image-->
+    <p style="font-size: 120%; color: rgb(255, 221, 29)"> @Buckulon8855</p> <!--@-->
+    <p style="font-size: 160%; color: rgb(145, 33, 33)"> 38 | 6'5" | 285lbs | <br> Professional Weight Lifter </p> <!--text-->
+    <a href="https://www.facebook.com/" style="font-size: 120%; color: rgb(203, 138, 27)">www.Facebook/Buckinator</a> <!--link-->
     <p></p>
-    <img src="Tim-Buck.jpg.webp" style="width:250px"> <!--image-->
     <form>
         <p><input type="email" name="email" placeholder="enter email"></p>
-        <p>Do you punch small children?</p>
+        <p style="color: rgb(203, 27, 27)">Do you eat Beef?</p>
             <input type="radio" id="yes" name="PunchKids" required value="yes"> <!-- Yes -->
-            <label for="yes">Yes</label>
+            <label for="yes" style="color: rgb(203, 27, 27)">Yes</label>
             <input type="radio" id="no" name="PunchKids" required value="no"> <!-- No -->
-            <label for="no">No</label>
-            <input type="radio" id="yess" name="PunchKids" required value="yess"> <!-- Diff Yes-->
-            <label for="yess">Yes but different</label>
-        <p><input type="submit" value="Submit Feedback" name="submit"></p>
+            <label for="no"  style="color: rgb(203, 27, 27)">No</label>
+            <input type="radio" id="yess" name="PunchKids" required value="yess""> <!-- Diff Yes-->
+            <label for="yess" style="color: rgb(203, 27, 27)">Yes but different</label>
+        <p><input type="submit" value="Submit Feedback" name="submit" style="color: rgb(48, 3, 3)"></p>
     </form>
 </body>
 </html>
