--- a/Profile.html
+++ b/Profile.html
@@ -7,15 +7,15 @@
     <link href="ProfileStyle.css" rel="stylesheet">
 </head>
 <body>
-    <h2 class="red">Instagram</h2> <!--title-->
+    <h2 class="white">Instagram</h2> <!--title-->
     <h1>Tim Buck</h1> <!--name-->
-    <img src="Tim-Buck.jpg.webp"> <!--image-->
-    <p> @Buckulon8855</p> <!--@-->
+    <img src="Tim-Buck.jpg.webp"> <!--profile image-->
+    <p> @TimBuck2</p> <!--@-->
     <p> 38 | 6'5" | 285lbs | <br> Professional Weight Lifter </p> <!--text-->
-    <a href="https://www.facebook.com/" class="red">www.Facebook/Buckinator</a> <!--link-->
+    <a href="https://www.facebook.com/" class="white">www.Facebook/Buckinator</a> <!--link-->
     <p></p>
     <form>
-        <p><input type="email" name="email" placeholder="enter email"></p>
+        <p><input type="email" name="email" placeholder="enter email" class="email"></p>
         <p>Do you eat Beef?</p>
         <p>
             <input type="radio" id="yes" name="Beef?" required value="yes"> <!-- Yes -->
@@ -25,7 +25,11 @@
             <input type="radio" id="none" name="Beef?" required value="none"> <!-- Pref no ans-->
             <label for="none">Prefer not to answer</label>
         </p>
-        <p><input type="submit" value="Submit Feedback" name="submit" class="red"></p>
+        <p><input type="submit" value="Submit Feedback" name="submit" class="email"></p>
     </form>
+    <img src="beef.webp" class="beef"> <!--beef images-->
+    <img src="beef1.png" class="beef"> 
+    <img src="beef2.jpg" class="beef">
+    <img src="beef3.jpg" class="beef">
 </body>
 </html>
